--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </section>
     </main>
     <footer>
-        <a>a href="/">Web<span>Studio</span></a>
+        <a href="/">Web<span>Studio</span></a>
         <address>
             <ul>
                 <li><a href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
