--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img src="./img/img01.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
-                /li>
+                </ul>
                 <li>
                     <img src="./img/img01.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3>Ольга Репина</h3>
@@ -89,7 +89,7 @@
             <ul>
                 <li><a href="/">г. Киев, пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li<a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
+                <li><a href="tel:+38 096 111 11 11">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
